--- a/Mobile/src/app/home/home.page.html
+++ b/Mobile/src/app/home/home.page.html
@@ -68,7 +68,7 @@
             </a>
         </ion-col>
         <ion-col size="3" class="menu-col">
-            <a class="menu-href">
+            <a class="menu-href" (click)="Aset()">
                 <ion-icon name="briefcase-outline" class="menu-icon"></ion-icon>
                 <p>Aset</p>
             </a>
