--- a/Mobile/src/app/document/document.page.html
+++ b/Mobile/src/app/document/document.page.html
@@ -17,39 +17,48 @@
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Akta Pendirian *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.akta_pendirian)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Pengesahan Kemenkumham *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.pengesahan_kemenkumham)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.pengesahan_kemenkumham)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Akta Perubahan</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.akta_perubahan)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_perubahan)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Pengesahan Kemenkumham</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.pengesahan_kemenkumham2)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.pengesahan_kemenkumham2)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Surat Izin Usaha *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.surat_izin_usaha)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.surat_izin_usaha)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">TDP *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.TDP)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.TDP)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">NPWP *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.NPWP)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.NPWP)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">SPPKP</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.SPPKP)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.SPPKP)">Upload</ion-button>
                 </ion-item>
                 <ion-item lines="full">
                     <ion-label style="color: black; font-size: 12px;">Surat Izin Tempat Usaha *</ion-label>
-                    <ion-button mode="ios" size="small" (click)="ShowActionSheet(Document.surat_izin_tempat_usaha)">Upload</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.akta_pendirian)">Download</ion-button>
+                    <ion-button mode="ios" size="small" color="vendorposlog" (click)="ShowActionSheet(Document.surat_izin_tempat_usaha)">Upload</ion-button>
                 </ion-item>
             </ion-list>
         </ion-col>
