--- a/Mobile/src/app/profile/profile.page.html
+++ b/Mobile/src/app/profile/profile.page.html
@@ -15,10 +15,10 @@
         </ion-col>
         <ion-col size="12">
             <ion-list>
-                <ion-list-header>
+                <ion-item lines="none">
                     <ion-label style="font-size: 15px;">My Profile</ion-label>
-                    <ion-button shape="round" fill="outline" mode="ios" size="small" color="vendorposlog" (click)="UpdateProfile()"><ion-icon name="create" color="vendorposlog"></ion-icon></ion-button>
-                </ion-list-header>
+                    <ion-icon name="create" color="vendorposlog" (click)="UpdateProfile()"></ion-icon>
+                </ion-item>
                 <ion-item>
                     <ion-label>
                         <p class="profile-font">Full Name</p>
@@ -39,10 +39,10 @@
                 </ion-item>
             </ion-list>
             <ion-list>
-                <ion-list-header>
+                <ion-item lines="none">
                     <ion-label style="font-size: 15px;">Your Password</ion-label>
-                    <ion-button shape="round" fill="outline" mode="ios" size="small" color="vendorposlog" (click)="UpdatePassword()"><ion-icon name="create" color="vendorposlog"></ion-icon></ion-button>
-                </ion-list-header>
+                    <ion-icon name="create" color="vendorposlog" (click)="UpdatePassword()"></ion-icon>
+                </ion-item>
                 <ion-item>
                     <ion-label>
                         <h2 class="profile-font">*********</h2>
